Fix height and location when hover on checked checkbox, Fix accordion padding issue when collapsing it, Remove box-shadow from saved item button

--- a/src/stories/accordion.css
+++ b/src/stories/accordion.css
@@ -18,6 +18,10 @@
     line-height: 150%;
 }
 
+.accordion .ant-collapse-content .ant-collapse-content-box {
+    padding: 0;
+}
+
 .accordion .ant-collapse-item .anticon.anticon-right.ant-collapse-arrow {
     transform: rotate(90deg);
 }
