--- a/src/stories/columnMenu.css
+++ b/src/stories/columnMenu.css
@@ -66,6 +66,7 @@
     align-items: center;
     justify-content: center;
     margin-right: 2px;
+    box-shadow: none;
 }
 
 .column-menu__saved-items {
